--- a/composer.json
+++ b/composer.json
@@ -32,8 +32,7 @@
         "files": [
             "src/Helpers/primitives.php",
             "src/Helpers/sse.php",
-            "src/Helpers/mcp_events.php",
-            "src/Helpers/auth.php"
+            "src/Helpers/mcp_events.php"
         ]
     },
     "autoload-dev": {
